InGame Setting Button
인게임에서 세팅 버튼 작동하도록 수정

Lerp 클래스에 Lerp종료시 특정 작업을 할 수 있는 메서드인 Lerp.LerpValueAfter()를 추가함

--- a/Notes/20230515.md
+++ b/Notes/20230515.md
@@ -84,3 +84,24 @@
         outline.OutlineWidth = enabled ? enabledOutlineWidth : disabledOutlineWidth;
     }
    ```
+
+7. 인게임 시스템 메뉴에 세팅 버튼이 위치만하고 작동하지는 않았는데 기능 추가  
+   사실 금방 되는건데 이유없이 미루고 있었음. UI는 메인씬의 세팅 UI를 그대로 따라감
+
+8. Lerp클래스에 Lerp가 끝난 후 특정 작업을 실행할 수 있도록 LerpValueAfter() 메서드를 추가함
+   ```c#
+   public static IEnumerator LerpValueAfter<T>(
+        Action<T> valueSetter,            
+        T from,                           
+        T to,                             
+        float duration,                   
+        Func<T, T, float, T> lerpFunction,
+        Func<float, float> easingFunction,
+        Action afterFunc = null)          
+    {
+        yield return LerpValue(valueSetter, from, to, duration, lerpFunction, easingFunction);
+
+        afterFunc?.Invoke();
+    }
+   ```
+   기존 LerpValue()를 그대로 실행하고, 마지막에 afterFunc가 null이 아니면 실행하는 방식으로 구현하였음
